<resources>
    <string name="app_name">Recordatorio App</string>
    <string name="login_title_part_1">App Agenda</string>
    <string name="login_title_part_2">Y Alimentos</string>
    <string name="login_button">INGRESAR</string>
    <string name="login_user_field_label">Usuario</string>
    <string name="login_password_field_label">Contraseña</string>
    <string name="login_password_field_placeholder">Registra tu contraseña</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="fondo">Fondo de la aplicación</string>
    <string name="camara">Abrir cámara</string>
    <string name="atras">Ir a pantalla anterior</string>
    <string name="agregar">Ir a pantalla agregar</string>
    <string name="foto_tomada">foto_tomada_desde_camara.png</string>
    <string name="title_activity_seleccionar_opcion">SeleccionarOpcionActivity</string>
    <string name="opciones_alimentar_button">ALIMENTAR</string>
    <string name="opciones_agenda_button">AGENDA</string>

    <string name="title_activity_agenda_lista">AgendaListaActivity</string>
    <string name="title_activity_agenda_crear">CrearAgendaActivity</string>
    <string name="title_agenda_crear">Crea tu evento</string>
    <string name="crear_add_button">AGREGAR</string>
    <string name="label_date_hour_ini">Fecha y hora inicio</string>
    <string name="label_date_hour_end">Fecha y hora fin</string>
    <string name="label_event_description">Describe tu evento</string>
    <string name="label_add_image">Adjunta una imagen</string>

    <string name="title_activity_alimentos_lista">AlimentosListaActivity</string>
    <string name="title_alimentar_lista">Alimentos</string>
    <string name="title_activity_alimento_crear">AlimentoCrearActivity</string>
    <string name="title_alimentar_crear">Crea tu alimento</string>
    <string name="fecha_hora_inicio">Fecha y hora inicio</string>
    <string name="fecha_hora_fin">Fecha y hora fin</string>
    <string name="descripcion_evento">Describe tu evento</string>
    <string name="recordatorio_cuando_inicia">Tu recordatorio iniciará</string>
    <string name="recordatorio_repeticion">Recuérdalo cada</string>
    <string name="adjunta_una_imagen">Adjunta una imagen</string>
    <string name="codigo_barras">Código de barras</string>
    <string name="producto">Producto</string>
    <string name="tu_producto_caduca">Tu producto caduca</string>
    <string name="tu_recordatorio_iniciara">Tu recordatorio iniciará</string>
    <string name="crear_alimento_button">AGREGAR</string>
    <string name="multiselect_description">Selecciona un item</string>
</resources>