<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ImageView
    android:id="@+id/fondo1"
    android:layout_width="match_parent"
    android:layout_height="414dp"
    android:contentDescription="@string/fondo"
    android:src="@drawable/fondo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
  />

  <TextView
    android:id="@+id/CrearAgendaTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="64dp"
    android:fontFamily="@font/fontfamily"
    android:lineHeight="31dp"
    android:text="@string/title_agenda_crear"
    android:textAlignment="center"
    android:textColor="@color/black"
    android:textFontWeight="600"
    android:textSize="24sp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="30dp"
  />

  <ImageButton
    android:id="@+id/OpenCamera"
    android:layout_width="24dp"
    android:layout_height="20dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:contentDescription="@string/atras"
    android:layout_marginTop="550dp"
    android:layout_marginEnd="24dp"
    android:background="@drawable/camara"
  />

  <ImageButton
    android:id="@+id/AtrasButton"
    android:layout_width="38dp"
    android:layout_height="38dp"
    android:contentDescription="@string/camara"
    android:background="@drawable/colorchange_atras"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="24dp"
    android:layout_marginTop="24dp"
  />

  <LinearLayout
    android:id="@+id/Medio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="70dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_bias="0.1"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/CrearButtonContent"
  >

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/UserSection"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="48dp"
      android:layout_marginVertical="16dp">

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InitDateHourField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:hint="@string/label_date_hour_ini"
        android:textColorHint="@color/gris_oscuro_primario"
        app:layout_constraintBottom_toTopOf="@+id/EndDateHourField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconMode="clear_text"
      >
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/InitDateHourInput"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:singleLine="true"
          android:textColor="@color/gris_oscuro_primario"
          android:textFontWeight="300"
          android:textSize="12sp"
          android:focusable="false"
          android:clickable="true"
          android:fontFamily="@font/fontfamily"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EndDateHourField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:hint="@string/label_date_hour_end"
        android:textColorHint="@color/gris_oscuro_primario"
        app:layout_constraintBottom_toTopOf="@+id/DescripcionEventoField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InitDateHourField"
        app:endIconMode="clear_text"
      >
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/EndDateHourInput"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:singleLine="true"
          android:textColor="@color/gris_oscuro_primario"
          android:textFontWeight="300"
          android:textSize="12sp"
          android:focusable="false"
          android:clickable="true"
          android:fontFamily="@font/fontfamily"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DescripcionEventoField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:hint="@string/label_event_description"
        android:textColorHint="@color/gris_oscuro_primario"
        app:layout_constraintBottom_toTopOf="@+id/RecordatorioIniciaraField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EndDateHourField"
        app:endIconMode="clear_text"
      >
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/DescripcionEventoInput"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:singleLine="true"
          android:textColor="@color/gris_oscuro_primario"
          android:textFontWeight="300"
          android:textSize="12sp"
          android:fontFamily="@font/fontfamily"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RecordatorioIniciaraField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:hint="@string/recordatorio_cuando_inicia"
        android:textColorHint="@color/gris_oscuro_primario"
        app:layout_constraintBottom_toTopOf="@+id/RecordatorioRepetirField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescripcionEventoField"
        app:endIconMode="clear_text"
      >
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/RecordatorioIniciaraInputText"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:singleLine="true"
          android:textColor="@color/gris_oscuro_primario"
          android:textFontWeight="300"
          android:textSize="12sp"
          android:focusable="false"
          android:clickable="true"
          android:fontFamily="@font/fontfamily"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/RecordatorioRepetirField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:hint="@string/recordatorio_repeticion"
        android:textColorHint="@color/gris_oscuro_primario"
        app:layout_constraintBottom_toTopOf="@+id/AdjuntarImagenField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecordatorioIniciaraField"
        app:layout_constraintBottom_toBottomOf="parent"
      >
        <AutoCompleteTextView
          android:id="@+id/RecordatorioRepetirInputText"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:paddingHorizontal="16dp"
          android:inputType="none"
          android:singleLine="true"
          android:contentDescription="@string/multiselect_description"
          android:textColor="@color/gris_oscuro_primario"
          android:textFontWeight="300"
          android:textSize="12sp"
          android:fontFamily="@font/fontfamily"
          android:labelFor="@+id/LabelForAutocomplete"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AdjuntarImagenField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="45dp"
        android:layout_weight="1"
        android:hint="@string/label_add_image"
        android:textColorHint="@color/gris_oscuro_primario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecordatorioRepetirField"
        app:endIconMode="clear_text"
      >
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/AdjuntarImagenInputText"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:singleLine="true"
          android:textColor="@color/gris_oscuro_primario"
          android:textFontWeight="300"
          android:textSize="12sp"
          android:fontFamily="@font/fontfamily"
          android:enabled="false"
        />
      </com.google.android.material.textfield.TextInputLayout>

      <TextView
        android:id="@+id/LabelForAutocomplete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
      />
    </androidx.constraintlayout.widget.ConstraintLayout>

  </LinearLayout>

  <LinearLayout
    android:id="@+id/CrearButtonContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/fondoinferior_formulario"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintVertical_bias="0.01"
  >
  </LinearLayout>

  <Button
    android:id="@+id/CrearButton"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="80dp"
    android:layout_marginVertical="60dp"
    android:layout_gravity="center"
    android:fontFamily="@font/fontfamily"
    android:textAlignment="center"
    android:textColor="@color/white"
    android:textFontWeight="800"
    android:textSize="13sp"
    android:text="@string/crear_add_button"
    android:background="@drawable/colorchange"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintVertical_bias="0.01"
  />

</androidx.constraintlayout.widget.ConstraintLayout>