<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Superior"
        android:layout_width="match_parent"
        android:layout_height="327dp"
        app:layout_constraintBottom_toTopOf="@id/Medio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    >

        <ImageView
            android:id="@+id/fondo"
            android:layout_width="410dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/fondo"
            android:src="@drawable/fondo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/figurasuperior"
            android:layout_width="410dp"
            android:layout_height="200dp"
            android:contentDescription="@string/fondo"
            android:src="@drawable/figurasuperior_login"
            app:layout_constraintBottom_toTopOf="@+id/Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.09" />

        <LinearLayout
            android:id="@+id/Title"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/figurasuperior">

            <TextView
                android:id="@+id/LogInTitlePart1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="64dp"
                android:fontFamily="@font/fontfamily"
                android:lineHeight="31dp"
                android:text="@string/login_title_part_1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/LogInTitlePart2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="48dp"
                android:fontFamily="@font/fontfamily"
                android:lineHeight="31dp"
                android:text="@string/login_title_part_2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="24sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/Medio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/Superior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Inferior">

        <LinearLayout
            android:id="@+id/User"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/UserLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fontfamily"
                android:layout_marginHorizontal="28dp"
                android:text="@string/login_user_field_label"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/UserField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textFontWeight="300"
                android:textSize="10sp"
                android:inputType="text"
                android:text="@string/login_user_field_placeholder" />

            <TextView
                android:id="@+id/PasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fontfamily"
                android:layout_marginHorizontal="28dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="12sp"
                android:text="@string/login_password_field_label" />

            <EditText
                android:id="@+id/PasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textFontWeight="300"
                android:textSize="10sp"
                android:inputType="text"
                android:text="@string/login_password_field_placeholder" />

            <Button
                android:id="@+id/LogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="64dp"
                android:layout_marginVertical="8dp"
                android:layout_gravity="center"
                android:fontFamily="@font/fontfamily"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textFontWeight="800"
                android:textSize="13sp"
                android:text="@string/login_button"
                android:background="@color/verde_oscuro_primario"
            />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Inferior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Medio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/figurainferior"
            android:layout_width="410dp"
            android:layout_height="120dp"
            android:contentDescription="@string/fondo"
            android:src="@drawable/figurainferior_login"
            app:layout_constraintBottom_toTopOf="@+id/Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.09" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>